quartz-dnd: make sure to set source window

https://bugzilla.gnome.org/show_bug.cgi?id=658722