gdk/quartz/gdkdnd-quartz.c
@@ -44,6 +44,9 @@ _gdk_quartz_window_drag_begin (GdkWindow *window,
                                                   NULL);
   _gdk_quartz_drag_source_context->is_source = TRUE;
 
+  _gdk_quartz_drag_source_context->source_window = window;
+  g_object_ref (window);
+
   _gdk_quartz_drag_source_context->targets = targets;
 
   gdk_drag_context_set_device (_gdk_quartz_drag_source_context, device);
